# STM32-BareMetal

.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: Blink_Leds.1690565134301.pdom  Blink_Leds.language.settings.xml  Digital_Input.1690604201342.pdom  Digital_Input.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/.projects/Blink_Leds/: .location
.metadata/.plugins/org.eclipse.core.resources/.projects/Blink_Leds/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/Digital_Input/: .location
.metadata/.plugins/org.eclipse.core.resources/.projects/Digital_Input/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 4.tree  6.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Blink_Leds/: .cproject  .project  Blink_Leds Debug.launch  CMakeLists.txt
Blink_Leds/Debug/: Blink_Leds.elf  Blink_Leds.list  Blink_Leds.map  makefile
Blink_Leds/Src/: main.c
Blink_Leds/cmake/: st-project.cmake
Digital_Input/: .cproject  .project  CMakeLists.txt  Example.txt
Digital_Input/Inc/: globaldefine.h
Digital_Input/Src/: main.c
Digital_Input/cmake/: st-project.cmake
(+2 files in other folders)
